cmake_minimum_required(VERSION 2.8)
cmake_policy(SET CMP0015 NEW)

find_package(LibXml2)
if(LIBXML2_FOUND)
        include_directories(${LIBXML2_INCLUDE_DIR})
endif()

include_directories(../../../src/parser ../../../src/libsrcml)
link_directories(../../../build)
enable_testing()

add_executable(srcml_convenient srcml_convenient.c)
target_link_libraries(srcml_convenient srcml)
add_executable(srcml_copy_archive srcml_copy_archive.c)
target_link_libraries(srcml_copy_archive srcml)
add_executable(srcml_create_archive_fd srcml_create_archive_fd.c)
target_link_libraries(srcml_create_archive_fd srcml)
add_executable(srcml_create_archive_file srcml_create_archive_file.c)
target_link_libraries(srcml_create_archive_file srcml)
add_executable(srcml_create_archive_filename srcml_create_archive_filename.c)
target_link_libraries(srcml_create_archive_filename srcml)
add_executable(srcml_create_archive_full srcml_create_archive_full.c)
target_link_libraries(srcml_create_archive_full srcml)
add_executable(srcml_create_archive_memory srcml_create_archive_memory.c)
target_link_libraries(srcml_create_archive_memory srcml)
add_executable(srcml_direct_language srcml_direct_language.c)
target_link_libraries(srcml_direct_language srcml)
add_executable(srcml_direct_language_list srcml_direct_language_list.c)
target_link_libraries(srcml_direct_language_list srcml)
add_executable(srcml_direct_language_xml srcml_direct_language_xml.c)
target_link_libraries(srcml_direct_language_xml srcml)
add_executable(srcml_direct_src2srcml srcml_direct_src2srcml.c)
target_link_libraries(srcml_direct_src2srcml srcml)
add_executable(srcml_direct_srcml2src srcml_direct_srcml2src.c)
target_link_libraries(srcml_direct_srcml2src srcml)
add_executable(srcml_list srcml_list.c)
target_link_libraries(srcml_list srcml)
add_executable(srcml_read_archive_fd srcml_read_archive_fd.c)
target_link_libraries(srcml_read_archive_fd srcml)
add_executable(srcml_read_archive_file srcml_read_archive_file.c)
target_link_libraries(srcml_read_archive_file srcml)
add_executable(srcml_read_archive_filename srcml_read_archive_filename.c)
target_link_libraries(srcml_read_archive_filename srcml)
add_executable(srcml_read_archive_full srcml_read_archive_full.c)
target_link_libraries(srcml_read_archive_full srcml)
add_executable(srcml_read_archive_memory srcml_read_archive_memory.c)
target_link_libraries(srcml_read_archive_memory srcml)
add_executable(srcml_relaxng srcml_relaxng.c)
target_link_libraries(srcml_relaxng srcml)
add_executable(srcml_sort_archive srcml_sort_archive.c)
target_link_libraries(srcml_sort_archive srcml)
add_executable(srcml_split_archive srcml_split_archive.c)
target_link_libraries(srcml_split_archive srcml)
add_executable(srcml_transform srcml_transform.c)
target_link_libraries(srcml_transform srcml)
add_executable(srcml_xpath srcml_xpath.c)
target_link_libraries(srcml_xpath srcml)
add_executable(srcml_xslt srcml_xslt.c)
target_link_libraries(srcml_xslt srcml)

add_test(NAME srcml_convenient COMMAND srcml_convenient)
add_test(NAME srcml_copy_archive COMMAND srcml_copy_archive)
add_test(NAME srcml_create_archive_fd COMMAND srcml_create_archive_fd a.cpp)
add_test(NAME srcml_create_archive_file COMMAND srcml_create_archive_file a.cpp)
add_test(NAME srcml_create_archive_filename COMMAND srcml_create_archive_filename a.cpp)
add_test(NAME srcml_create_archive_full COMMAND srcml_create_archive_full a.cpp)
add_test(NAME srcml_create_archive_memory COMMAND srcml_create_archive_memory a.cpp)
add_test(NAME srcml_direct_language COMMAND srcml_direct_language)
add_test(NAME srcml_direct_language_list COMMAND srcml_direct_language_list)
add_test(NAME srcml_direct_language_xml COMMAND srcml_direct_language_xml)
add_test(NAME srcml_direct_src2srcml COMMAND srcml_direct_src2srcml)
add_test(NAME srcml_direct_srcml2src COMMAND srcml_direct_srcml2src)
add_test(NAME srcml_list COMMAND srcml_list)
add_test(NAME srcml_read_archive_fd COMMAND srcml_read_archive_fd)
add_test(NAME srcml_read_archive_file COMMAND srcml_read_archive_file)
add_test(NAME srcml_read_archive_filename COMMAND srcml_read_archive_filename)
add_test(NAME srcml_read_archive_full COMMAND srcml_read_archive_full)
add_test(NAME srcml_read_archive_memory COMMAND srcml_read_archive_memory)
add_test(NAME srcml_relaxng COMMAND srcml_relaxng)
add_test(NAME srcml_sort_archive COMMAND srcml_sort_archive)
add_test(NAME srcml_split_archive COMMAND srcml_split_archive)
add_test(NAME srcml_transform COMMAND srcml_transform)
add_test(NAME srcml_xpath COMMAND srcml_xpath)
add_test(NAME srcml_xslt COMMAND srcml_xslt)
